tests/baselines/reference/tsxPreserveEmit3.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
==== test.d.ts (0 errors) ====
    export var React;
    
==== react-consumer.tsx (0 errors) ====
    // This import should be elided
    import {React} from "./test";
    